test/analyzer/input_programs/invalid_programs/program16.tea
x := 0
y := 1.2

# valid since index is an int
"abc"[1]
"abc"[1*2]
"abc"[x]

#invalid since index is not an int
"abc"[y]